--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <app-header></app-header>
     <h1>Hello world!</h1>
+    <app-product-catalog></app-product-catalog>
 </div>
