create options for admin view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
     <app-header></app-header>
     <h1>Hello world!</h1>
     <app-product-catalog></app-product-catalog>
+    <hr />
+    <app-product-admin-options></app-product-admin-options>
 </div>
