create on click list item event

--- a/src/app/products/product-catalog/product-catalog.component.html
+++ b/src/app/products/product-catalog/product-catalog.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <a class="list-group-item clearfix" href="#" *ngFor="let product of products">
+        <a class="list-group-item clearfix" href="#" (click)="updateDetails(product.name)" *ngFor="let product of products">
             <div class="pull-left">
                 <h4 class="list-group-item-heading">{{ product.name }}</h4>
                 <p class="list-group-item-text">{{ product.description }}</p>
