--- a/src/app/products/product-catalog/product-catalog.component.html
+++ b/src/app/products/product-catalog/product-catalog.component.html
@@ -1,8 +1,22 @@
+
+
 <div class="row">
     <div class="col-md-12">
-        <button class="btn btn-primary">New Product</button>
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Name">
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" placeholder="description"></textarea>
+        </div>
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Image url">
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary">Create new product</button>
+        </div>
     </div>
 </div>
+<hr />
 <div class="row">
     <div class="col-md-12">
         <a class="list-group-item clearfix" href="#" (click)="updateDetails(product.name)" *ngFor="let product of products">
