--- a/src/app/products/product-catalog/product-catalog.component.html
+++ b/src/app/products/product-catalog/product-catalog.component.html
@@ -3,16 +3,16 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Name">
+            <input type="text" class="form-control" placeholder="Name" [(ngModel)]="newProductName">
         </div>
         <div class="form-group">
-            <textarea class="form-control" placeholder="description"></textarea>
+            <textarea class="form-control" placeholder="description" [(ngModel)]="newProductDescription"></textarea>
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Image url">
+            <input type="text" class="form-control" [(ngModel)]="newProductImageUrl" placeholder="Image url">
         </div>
         <div class="form-group">
-            <button class="btn btn-primary">Create new product</button>
+            <button class="btn btn-primary" (click)="createNewProduct()" >Create new product</button>
         </div>
     </div>
 </div>
@@ -27,7 +27,7 @@
 
             <!-- TODO: Add image -->
             <span class="pull-right">
-                <p>Image source</p>
+                <p>{{ product.imagePath }}</p>
             </span>
         </a>
     </div>
