--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <app-header></app-header>
-    <h1>Hello world!</h1>
+    <h1>Shoes</h1>
     <app-product-catalog></app-product-catalog>
     <hr />
     <app-product-admin-options></app-product-admin-options>
