--- a/src/app/products/product-catalog/product-catalog.component.html
+++ b/src/app/products/product-catalog/product-catalog.component.html
@@ -13,6 +13,8 @@
         </div>
         <div class="form-group">
             <button class="btn btn-primary" (click)="createNewProduct()" >Create new product</button>
+            &nbsp;
+            <button class="btn btn-primary" (click)="fetchAllProducts()" >Fetch all products</button>
         </div>
     </div>
 </div>
