--- a/src/app/products/product-admin-options/product-admin-options.component.html
+++ b/src/app/products/product-admin-options/product-admin-options.component.html
@@ -1,11 +1,12 @@
 <div class="row">
     <div class="col-md-12">
+        <!-- TODO: Update this according to product input -->
         <p>image path</p>
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
-        <h1>Product name</h1>
+        <h1>{{ product.name }}</h1>
     </div>
 </div>
 <div class="row">
