--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <div class="container">
     <app-header></app-header>
-    <h1>Shoes</h1>
-    <app-product-catalog (productSelected)="onProductSelected($event)"></app-product-catalog>
-    <hr />
-
-    <!-- Update this by binding it to the parent -->
-    <app-product-admin-options [product]="currentProduct"></app-product-admin-options>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
 </div>
