--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,13 +2,13 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" routerLink="/">Brand</a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
     <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Login<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Sign up</a></li>
+        <li class="active" ><a routerLink="/login">Login<span class="sr-only">(current)</span></a></li>
+        <li><a routerLink="/login">Sign up</a></li>
     </ul>
     </div><!-- /.container-fluid -->
   </nav>
