create admin and consumer portal

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,3 @@
 <h1>Shoes</h1>
-<app-product-catalog (productSelected)="onProductSelected($event)"></app-product-catalog>
-<hr />
-
-<!-- Update this by binding it to the parent -->
-<app-product-admin-options [product]="currentProduct"></app-product-admin-options>
+<app-admin *ngIf="isAdmin"></app-admin>
+<app-consumer *ngIf="!isAdmin"></app-consumer>
