--- a/src/app/accounts/login/login.component.css
+++ b/src/app/accounts/login/login.component.css
@@ -1,26 +1,30 @@
 .login-container{
     margin-top: 5%;
     margin-bottom: 5%;
+    display: table;
 }
 .login-form-1{
-    padding: 5%;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+    display: table-cell;
+    /* padding: 5%; */
+    /* box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19); */
 }
 .login-form-1 h3{
     text-align: center;
     color: #333;
 }
 .login-form-2{
-    padding: 5%;
-    background: #0062cc;
-    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
+    display: table-cell;
+    /* padding: 5%; */
+    /* background: #0062cc; */
+    /* box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19); */
 }
 .login-form-2 h3{
     text-align: center;
-    color: #fff;
+    /* color: #fff; */
+    color: #333;
 }
 .login-container form{
-    padding: 10%;
+    padding: 5%;
 }
 .btnSubmit
 {
@@ -37,8 +41,10 @@
 }
 .login-form-2 .btnSubmit{
     font-weight: 600;
-    color: #0062cc;
-    background-color: #fff;
+    color: #fff;
+    /* color: #0062cc; */
+    background-color: #0062cc;
+    /* background-color: #fff; */
 }
 .login-form-2 .ForgetPwd{
     color: #fff;
