--- a/src/app/accounts/login/login.component.html
+++ b/src/app/accounts/login/login.component.html
@@ -1,19 +1,43 @@
-<div class="row login-container">
-    <div class="col-md-6 login-form-1 col-md-offset-3">
-        <h3>Login for Form 1</h3>
-        <form>
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email *" value="" />
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Your Password *" value="" />
-            </div>
-            <div class="form-group">
-                <input type="submit" class="btnSubmit" value="Login" />
-            </div>
-            <div class="form-group">
-                <a href="#" class="ForgetPwd">Forget Password?</a>
-            </div>
-        </form>
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 login-form-1">
+            <h3>Login</h3>
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                </div>
+                <hr >
+                <div class="form-group">
+                    <input type="submit" class="btnSubmit" value="Login" />
+                </div>
+                <div class="form-group">
+                    <a href="#" class="ForgetPwd">Forget Password?</a>
+                </div>
+            </form>
+        </div>
+        <div class="col-md-6 login-form-2">
+            <h3>Create a new account</h3>
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                </div>
+                <hr >
+                <div class="form-group">
+                    <input type="submit" class="btnSubmit" value="Create account" />
+                </div>
+                <!-- <div class="form-group">
+                    <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
+                </div> -->
+            </form>
+        </div>
     </div>
 </div>
