--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <a class="navbar-brand" routerLink="/">Brand</a>
-      </div>
-  
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink="/">Brand</a>
+    </div>
+
       <!-- Collect the nav links, forms, and other content for toggling -->
     <ul class="nav navbar-nav navbar-right">
-        <li class="active" ><a routerLink="/login">Login<span class="sr-only">(current)</span></a></li>
-        <li><a routerLink="/login">Sign up</a></li>
+        <li class="active" ><a routerLink="/login"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></a></li>
+        <li><a routerLink="/cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
     </ul>
-    </div><!-- /.container-fluid -->
-  </nav>
+  </div><!-- /.container-fluid -->
+</nav>
