--- a/src/app/products/product-catalog/product-catalog.component.html
+++ b/src/app/products/product-catalog/product-catalog.component.html
@@ -1,39 +1,33 @@
-<div class="row">
-    <div class="col-md-12">
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Name" [(ngModel)]="newProductName">
-        </div>
-        <div class="form-group">
-            <textarea class="form-control" placeholder="description" [(ngModel)]="newProductDescription"></textarea>
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" [(ngModel)]="newProductImageUrl" placeholder="Image url">
-        </div>
-
-        <div class="form-group">
-            <button class="btn btn-primary" (click)="createNewProduct()" >Create new product</button>
-            &nbsp;
-            <button class="btn btn-primary" (click)="fetchAllProducts()" >Fetch all products</button>
-            &nbsp;
-            <button class="btn btn-primary" (click)="deleteAllProducts()" >Delete all products</button>
-        </div>
-    </div>
-</div>
-<hr />
-
 <!-- Place this in a seperate component -->
 <div class="row">
     <div class="col-md-12">
-        <a class="list-group-item clearfix" href="#" (click)="onProductSelect(product)" *ngFor="let product of products">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ product.name }}</h4>
-                <p class="list-group-item-text">{{ product.description }}</p>
+        <div *ngIf="!gridView">
+            <a class="list-group-item clearfix" href="#" (click)="onProductSelect(product)" *ngFor="let product of products">
+                <div class="pull-left">
+                    <h4 class="list-group-item-heading">{{ product.name }}</h4>
+                    <p class="list-group-item-text">{{ product.description }}</p>
+                </div>
+    
+                <!-- TODO: Add image -->
+                <span class="pull-right">
+                    <p>{{ product.imagePath }}</p>
+                </span>
+            </a>
+        </div>
+        <div *ngIf="gridView">
+            <div class="row">
+                <div class="col-md-4" *ngFor="let product of products">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            Heading
+                        </div>
+                        <div class="panel-body">
+                            Panel content
+                        </div>
+                        <div class="panel-footer">Panel footer</div>
+                    </div>
+                </div>
             </div>
-
-            <!-- TODO: Add image -->
-            <span class="pull-right">
-                <p>{{ product.imagePath }}</p>
-            </span>
-        </a>
+        </div>
     </div>
 </div>
