--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
     <ul class="nav navbar-nav navbar-right">
-      
+
         <!-- Login link -->
         <li class="active" >
           <a routerLink="/login" *ngIf="!isAuthenticated" style="cursor: pointer;">
@@ -19,7 +19,7 @@
 
         <!-- account -->
         <li *ngIf="isAuthenticated">
-          <a (click)="onLogout()" style="cursor: pointer;">
+          <a (click)="onClickAccount()" style="cursor: pointer;">
             {{ userEmail }}
           </a>
         </li>
