--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,35 @@
 <h1>Shoes</h1>
-<app-admin *ngIf="isAdmin"></app-admin>
-<app-consumer *ngIf="!isAdmin"></app-consumer>
+<app-product-catalog 
+    [gridView]="true" 
+    [products]="products">
+</app-product-catalog>
+<!-- TODO: find out why this isn't working -->
+<!-- <div *ngIf="user.isAdmin">
+    <button 
+        class="btn btn-primary" 
+        (click)="fetchAllProducts()">
+            Fetch all products
+    </button>
+    &nbsp;
+    <button 
+        class="btn btn-primary" 
+        (click)="deleteAllProducts()">
+            Delete all products
+    </button>
+    <hr />
+    <div class="row">
+        <div class="col-md-8">
+            <app-product-catalog
+                [gridView]="false"
+                [products]="products" 
+                (productSelected)="onProductSelected($event)">
+            </app-product-catalog>
+        </div>
+        <div class="col-md-4">
+            <app-product-create-form>
+            </app-product-create-form>
+        </div>
+    </div>
+    <hr />
+    <app-product-admin-options [product]="currentProduct"></app-product-admin-options>
+</div> -->
