--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -8,11 +8,35 @@
             />
         </div>
         <div class="col-md-6">
-            <h3>{{  isUpdateMode ? 'Update' : 'Info' }}</h3>
-            <br />
+            <h3 *ngIf="isEditMode">Edit</h3>
             <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
                 <div class="form-group">
-                    <input 
+                    <h1 *ngIf="!isEditMode && !isCreateMode">Sample text</h1>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-lg btn-block" [disabled]="!productForm.valid">
+                        <div *ngIf="user.isAdmin">
+                            {{ 
+                                (!isEditMode && !isCreateMode)? 'Edit' : 'Save'
+                            }}
+                        </div>
+                        <div *ngIf="!user.isAdmin">
+                            Add to cart
+                        </div>
+                    </button>
+                </div>
+                <div class="form-group">
+                    <a type="button" 
+                        class="btn btn-link btn-lg" 
+                        style="cursor: pointer;" 
+                        (click)="onBackClicked()" >
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
+                    </a>
+                </div>
+                <hr />
+                <div class="form-group">
+                    <input
+                        *ngIf="isEditMode || isCreateMode"
                         type="url" 
                         class="form-control" 
                         placeholder="Image path *"
@@ -22,6 +46,7 @@
                 </div>
                 <div class="form-group">
                     <input 
+                        *ngIf="isEditMode || isCreateMode"
                         type="text" 
                         class="form-control" 
                         placeholder="Name of the product *"
@@ -31,42 +56,47 @@
                 </div>
                 <div class="form-group">
                     <input 
+                        *ngIf="isEditMode || isCreateMode"
                         type="number" 
                         class="form-control" 
                         placeholder="Price of the product *"
                         ngModel
                         name="price"
                     />
+                    <p *ngIf="!isEditMode && !isCreateMode">&euro;300</p>
                 </div>
                 <div class="form-group">
-                    <input 
+                    <input
+                        *ngIf="isEditMode || isCreateMode"
                         type="number" 
                         class="form-control" 
                         placeholder="Product stock *"
                         ngModel
                         name="stock"
                     />
+                    <p *ngIf="!isEditMode && !isCreateMode">7</p>
                 </div>
                 <div class="form-group">
                     <textarea
+                        *ngIf="isEditMode || isCreateMode"
                         rows="5"
                         class="form-control" 
                         placeholder="description" 
                         ngModel
                         name="description">
                     </textarea>
-                </div>
-                <br />
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block" [disabled]="!productForm.valid">
-                        {{ isUpdateMode ? 'Update' : 'Sign up' }}
-                    </button> 
-                </div>
-                <div class="form-group">
-                        <a type="button" class="btn btn-link btn-lg" routerLink="/" >
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
-                        </a>
-                </div>
+                    <p *ngIf="!isEditMode && !isCreateMode">
+                        Bacon ipsum dolor amet bresaola drumstick flank hamburger tenderloin, 
+                        kevin shankle corned beef leberkas ham shank rump sirloin short loin. 
+                        Sausage doner ball tip flank, ham drumstick ribeye short ribs porchetta 
+                        bacon landjaeger pork chop rump pork belly. Landjaeger pork chicken, 
+                        ground round t-bone ball tip cupim tail spare ribs. Rump boudin swine 
+                        shankle, leberkas drumstick brisket pancetta porchetta jerky. 
+                        Meatloaf ham hock pancetta, beef buffalo frankfurter short ribs pork 
+                        loin. Short ribs frankfurter capicola, cow kevin strip steak pancetta 
+                        leberkas bacon drumstick shoulder pig boudin picanha ground round.
+                    </p>
+                </div>                
             </form>
         </div>
     </div>
