--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,18 @@
 <h1>Shoes</h1>
 <div *ngIf="!user.isAdmin" >
-    Add products page for users here
+    <div class="row">
+        <div *ngFor="let product of products" class="col-md-3 my-card">
+            <div routerLink="/product/details">
+                <img src="{{ product.imagePath }}" alt="Nike shoe" height=150px /><br>
+                <div class="my-card-container">
+                    {{ product.name }}<br>
+                    &euro;{{ product.price }}<br>
+                    {{ product.stock > 0? 'In stock' : 'Out of stock' }}
+                </div>
+            </div>
+            <button class="btn btn-info btn-block" (click)="addToCart()">Add to cart</button>
+        </div>
+    </div>
 </div>
 <div *ngIf="user.isAdmin">
     <a
@@ -44,7 +56,7 @@
                             <td class="vcenter">
                                 <a routerLink="/product/edit">Edit</a>&nbsp;|
                                 &nbsp;<a routerLink="/product/details">Details</a>&nbsp;|
-                                &nbsp;<a>Delete</a>
+                                &nbsp;<a (click)="deleteProduct(product.name)" >Delete</a>
                             </td>
                         </tr>      
                     </tbody>
