create checkout page

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -41,8 +41,10 @@
             YOUR ORDER
             <hr />
             Subtotal: &euro;{{ totalPrice }}
+            <br>
+            <br>
+            <a class="btn btn-primary btn-block" routerLink="/checkout" >Proceed to checkout</a>
         </div>
-        <!-- TODO: add a button to proceed to payment -->
     </div>
 </div>
 
