--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,7 @@
                             <td class="vcenter">
                                 <a routerLink="/product/edit">Edit</a>&nbsp;|
                                 &nbsp;<a routerLink="/product/details">Details</a>&nbsp;|
-                                &nbsp;<a (click)="deleteProduct(product.name)" >Delete</a>
+                                &nbsp;<a (click)="deleteProduct(product.id)" >Delete</a>
                             </td>
                         </tr>      
                     </tbody>
