--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -2,17 +2,19 @@
     <div class="row">
         <div class="col-md-6" *ngIf="!isCreateMode">
             <img 
-                src="http://www.oxygenmelody.com/wp-content/uploads/2018/03/nike-w-air-max-thea-ultra-prm-womens-shoes-beautiful-power.jpg"
-                alt="test image"
+                src="{{ this.currentProduct != undefined? this.currentProduct.imagePath : ''}}"
+                alt="{{ this.currentProduct != undefined? this.currentProduct.name : 'Loading'}}"
                 width="100%"
             />
         </div>
         <div class="{{ !isCreateMode? 'col-md-6' : 'col-md-12' }}">
-            <h3 *ngIf="isEditMode">Edit</h3>
-            <h3 *ngIf="isCreateMode">Add a new product</h3>
+            <h1 *ngIf="isEditMode">Edit</h1>
+            <h1 *ngIf="isCreateMode">Add a new product</h1>
             <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
                 <div class="form-group">
-                    <h1 *ngIf="!isEditMode && !isCreateMode">Sample text</h1>
+                    <h1 *ngIf="!isEditMode && !isCreateMode">
+                        {{ this.currentProduct != undefined? this.currentProduct.name : 'Loading'}}
+                    </h1>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-lg btn-block" [disabled]="!productForm.valid">
@@ -64,7 +66,9 @@
                         ngModel
                         name="price"
                     />
-                    <p *ngIf="!isEditMode && !isCreateMode">&euro;300</p>
+                    <p *ngIf="!isEditMode && !isCreateMode">
+                        &euro;{{ this.currentProduct != undefined? this.currentProduct.price : 'Loading'}}
+                    </p>
                 </div>
                 <div class="form-group">
                     <input
@@ -75,7 +79,9 @@
                         ngModel
                         name="stock"
                     />
-                    <p *ngIf="!isEditMode && !isCreateMode">7</p>
+                    <p *ngIf="!isEditMode && !isCreateMode">
+                        {{ this.currentProduct != undefined? this.currentProduct.stock : 'Loading'}}
+                    </p>
                 </div>
                 <div class="form-group">
                     <textarea
@@ -87,15 +93,7 @@
                         name="description">
                     </textarea>
                     <p *ngIf="!isEditMode && !isCreateMode">
-                        Bacon ipsum dolor amet bresaola drumstick flank hamburger tenderloin, 
-                        kevin shankle corned beef leberkas ham shank rump sirloin short loin. 
-                        Sausage doner ball tip flank, ham drumstick ribeye short ribs porchetta 
-                        bacon landjaeger pork chop rump pork belly. Landjaeger pork chicken, 
-                        ground round t-bone ball tip cupim tail spare ribs. Rump boudin swine 
-                        shankle, leberkas drumstick brisket pancetta porchetta jerky. 
-                        Meatloaf ham hock pancetta, beef buffalo frankfurter short ribs pork 
-                        loin. Short ribs frankfurter capicola, cow kevin strip steak pancetta 
-                        leberkas bacon drumstick shoulder pig boudin picanha ground round.
+                        {{ this.currentProduct != undefined? this.currentProduct.description : 'Loading'}}
                     </p>
                 </div>                
             </form>
