--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -43,7 +43,7 @@
                         type="url" 
                         class="form-control" 
                         placeholder="Image path *"
-                        ngModel
+                        [(ngModel)]="this.currentProduct.imagePath"
                         name="urlPath"
                     />
                 </div>
@@ -55,6 +55,7 @@
                         placeholder="Name of the product *"
                         ngModel
                         name="name"
+                        [(ngModel)]="this.currentProduct.name"
                     />
                 </div>
                 <div class="form-group">
@@ -63,8 +64,8 @@
                         type="number" 
                         class="form-control" 
                         placeholder="Price of the product *"
-                        ngModel
                         name="price"
+                        [(ngModel)]="this.currentProduct.price"
                     />
                     <p *ngIf="!isEditMode && !isCreateMode">
                         &euro;{{ this.currentProduct != undefined? this.currentProduct.price : 'Loading'}}
@@ -76,7 +77,7 @@
                         type="number" 
                         class="form-control" 
                         placeholder="Product stock *"
-                        ngModel
+                        [(ngModel)]="this.currentProduct.stock"
                         name="stock"
                     />
                     <p *ngIf="!isEditMode && !isCreateMode">
@@ -89,8 +90,9 @@
                         rows="5"
                         class="form-control" 
                         placeholder="description" 
-                        ngModel
+                        [(ngModel)]="this.currentProduct.description"
                         name="description">
+                        {{ this.currentProduct != undefined? this.currentProduct.description : 'Loading'}}
                     </textarea>
                     <p *ngIf="!isEditMode && !isCreateMode">
                         {{ this.currentProduct != undefined? this.currentProduct.description : 'Loading'}}
