can recieve shopping cart

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,14 @@
     <div class="row">
         <div *ngFor="let product of products" class="col-md-3 my-card">
             <div routerLink="/product/details/{{ product.id }}">
-                <img src="{{ product.imagePath }}" alt="Nike shoe" /><br>
+                <img src="{{ product.imagePath }}" alt="Nike shoe" height="150px" /><br>
                 <div class="my-card-container">
                     {{ product.name }}<br>
                     &euro;{{ product.price }}<br>
                     {{ product.stock > 0? 'In stock' : 'Out of stock' }}
                 </div>
             </div>
-            <button class="btn btn-info btn-block" (click)="addToCart()">Add to cart</button>
+            <button class="btn btn-info btn-block" (click)="addToCart(product.id)">Add to cart</button>
         </div>
     </div>
 </div>
