--- a/src/app/pages/account/authentication/authentication.component.html
+++ b/src/app/pages/account/authentication/authentication.component.html
@@ -1,15 +1,15 @@
 <div class="container login-container">
     <div class="row">
         <div class="col-md-6 login-form col-md-offset-3">
-            <h3>{{  isLoginMode ? 'Login' : 'Sign up' }}</h3>
+            <h3>{{  (authenticationMode === 'LOGIN') ? 'Login' : 'Sign up' }}</h3>
             <br />
-            <div class="alert alert-danger" *ngIf="error">
-                <p>{{ error }}</p>
+            <div class="alert alert-danger" *ngIf="errorMessage">
+                <p>{{ errorMessage }}</p>
             </div>
-            <div *ngIf="isLoading">
+            <div *ngIf="pageIsLoading">
                 <app-loading-spinner></app-loading-spinner>
             </div>
-            <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+            <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!pageIsLoading">
                 <div class="form-group">
                     <input 
                         type="email" 
@@ -37,12 +37,12 @@
                 <br />
                 <div class="form-group">
                     <button type="submit" class="btn btn-lg btn-block btnSubmit" [disabled]="!authForm.valid">
-                        {{ isLoginMode ? 'Login' : 'Sign up' }}
+                        {{ (authenticationMode === 'LOGIN') ? 'Login' : 'Sign up' }}
                     </button> 
                 </div>
                 <div class="form-group">
                     <a type="button" class="switchToSignUp" (click)="onSwitchMode()">
-                        Switch to {{ !isLoginMode ? 'Login' : 'Sign up' }}
+                        Switch to {{ (authenticationMode === 'LOGIN') ? 'Sign up' : 'Login' }}
                     </a>
                 </div>
             </form>
