--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,6 @@
 <h1>Shoes</h1>
-<div *ngIf="!user.isAdmin" >
-    <div class="row">
-        <div *ngFor="let product of products" class="col-md-3 my-card">
-            <div routerLink="/product/details/{{ product.id }}">
-                <img src="{{ product.imagePath }}" alt="Nike shoe" height="150px" /><br>
-                <div class="my-card-container">
-                    {{ product.name }}<br>
-                    &euro;{{ product.price }}<br>
-                    {{ product.stock > 0? 'In stock' : 'Out of stock' }}
-                </div>
-            </div>
-            <button class="btn btn-info btn-block" (click)="addToCart(product.id)">Add to cart</button>
-        </div>
-    </div>
-</div>
-<div *ngIf="user.isAdmin">
+<app-consumer [user]="user" [products]="products"></app-consumer>
+<div *ngIf="user !== null">
     <a
         routerLink='/product/create' 
         class="btn btn-primary">
