fix details page

--- a/src/app/pages/home/admin/admin.component.html
+++ b/src/app/pages/home/admin/admin.component.html
@@ -1,5 +1,5 @@
 <a
-    routerLink='/product/create' 
+    routerLink='/product/mutate' 
     class="btn btn-primary">
         +Add new product
 </a>&nbsp;
@@ -37,7 +37,7 @@
                             {{ product.stock }}
                         </td>
                         <td class="vcenter">
-                            <a routerLink="/product/edit/{{ product.id }}">Edit</a>&nbsp;|
+                            <a routerLink="/product/mutate/{{ product.id }}">Edit</a>&nbsp;|
                             &nbsp;<a routerLink="/product/details/{{ product.id }}">Details</a>&nbsp;|
                             &nbsp;<a style="cursor: pointer;" (click)="deleteProduct(product.id)" >Delete</a>
                         </td>
