--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,104 +1,21 @@
-<div class="container login-container">
-    <div class="row">
-        <div class="col-md-6" *ngIf="!isCreateMode">
-            <img 
-                src="{{ this.currentProduct != undefined? this.currentProduct.imagePath : ''}}"
-                alt="{{ this.currentProduct != undefined? this.currentProduct.name : 'Loading'}}"
-                width="100%"
-            />
-        </div>
-        <div class="{{ !isCreateMode? 'col-md-6' : 'col-md-12' }}">
-            <h1 *ngIf="isEditMode">Edit</h1>
-            <h1 *ngIf="isCreateMode">Add a new product</h1>
-            <form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
-                <div class="form-group">
-                    <h1 *ngIf="!isEditMode && !isCreateMode">
-                        {{ this.currentProduct != undefined? this.currentProduct.name : 'Loading'}}
-                    </h1>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-lg btn-block" [disabled]="!productForm.valid">
-                        <div *ngIf="user.isAdmin">
-                            {{ 
-                                (!isEditMode && !isCreateMode)? 'Edit' : 'Save'
-                            }}
-                        </div>
-                        <div *ngIf="!user.isAdmin">
-                            Add to cart
-                        </div>
-                    </button>
-                </div>
-                <div class="form-group">
-                    <a type="button" 
-                        class="btn btn-link btn-lg" 
-                        style="cursor: pointer;" 
-                        (click)="onBackClicked()" >
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
-                    </a>
-                </div>
-                <hr />
-                <div class="form-group">
-                    <input
-                        *ngIf="isEditMode || isCreateMode"
-                        type="url" 
-                        class="form-control" 
-                        placeholder="Image path *"
-                        [(ngModel)]="this.currentProduct.imagePath"
-                        name="urlPath"
-                    />
-                </div>
-                <div class="form-group">
-                    <input 
-                        *ngIf="isEditMode || isCreateMode"
-                        type="text" 
-                        class="form-control" 
-                        placeholder="Name of the product *"
-                        ngModel
-                        name="name"
-                        [(ngModel)]="this.currentProduct.name"
-                    />
-                </div>
-                <div class="form-group">
-                    <input 
-                        *ngIf="isEditMode || isCreateMode"
-                        type="number" 
-                        class="form-control" 
-                        placeholder="Price of the product *"
-                        name="price"
-                        [(ngModel)]="this.currentProduct.price"
-                    />
-                    <p *ngIf="!isEditMode && !isCreateMode">
-                        &euro;{{ this.currentProduct != undefined? this.currentProduct.price : 'Loading'}}
-                    </p>
-                </div>
-                <div class="form-group">
-                    <input
-                        *ngIf="isEditMode || isCreateMode"
-                        type="number" 
-                        class="form-control" 
-                        placeholder="Product stock *"
-                        [(ngModel)]="this.currentProduct.stock"
-                        name="stock"
-                    />
-                    <p *ngIf="!isEditMode && !isCreateMode">
-                        {{ this.currentProduct != undefined? this.currentProduct.stock : 'Loading'}}
-                    </p>
-                </div>
-                <div class="form-group">
-                    <textarea
-                        *ngIf="isEditMode || isCreateMode"
-                        rows="5"
-                        class="form-control" 
-                        placeholder="description" 
-                        [(ngModel)]="this.currentProduct.description"
-                        name="description">
-                        {{ this.currentProduct != undefined? this.currentProduct.description : 'Loading'}}
-                    </textarea>
-                    <p *ngIf="!isEditMode && !isCreateMode">
-                        {{ this.currentProduct != undefined? this.currentProduct.description : 'Loading'}}
-                    </p>
-                </div>                
-            </form>
-        </div>
+<div class="row">
+    <div class="col-md-6">
+        <img 
+            src="{{ defaultImageUri }}"
+            alt="No image found"
+            width="100%"
+        />
+    </div>
+    <div class="col-md-6">
+        <!-- get the following header to change according to the mode -->
+        <h2>Mutate</h2>
+        <app-details 
+            (switchToMode)="switchToMutateMode()" 
+            (pageToRedirectUser)="redirectUser($event)" 
+            [product]="currentProduct" 
+            [user]="user" 
+            *ngIf="productPageMode === 'DETAILS'">
+        </app-details>
+        <app-mutate *ngIf="productPageMode === 'MUTATE'"></app-mutate>
     </div>
 </div>
