--- a/src/app/pages/product/mutate/mutate.component.html
+++ b/src/app/pages/product/mutate/mutate.component.html
@@ -1,54 +1,66 @@
-<form #productForm="ngForm">
+<form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
     <div class="form-group">
-        <button type="submit" class="btn btn-default btn-lg btn-block" [disabled]="!productForm.valid">
-            Save
+        <button 
+            type="submit" 
+            class="btn btn-default btn-lg btn-block" 
+            [disabled]="!productForm.valid">
+                Save
         </button>
     </div>
     <div class="form-group">
         <a type="button" 
+            (click)="handleOnBackPressed()"
             class="btn btn-link btn-lg" 
             style="cursor: pointer;">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
         </a>
     </div>
     <hr />
-    <div class="form-group">
-        <input
-            type="url" 
-            class="form-control" 
-            placeholder="Image path"
-            name="urlPath"
-        />
-    </div>
-    <div class="form-group">
-        <input 
-            type="text" 
-            class="form-control" 
-            placeholder="Name of the product *"
-            name="name"
-        />
-    </div>
-    <div class="form-group">
-        <input 
-            type="number" 
-            class="form-control" 
-            placeholder="Price of the product *"
-            name="price"
-        />
-    </div>
-    <div class="form-group">
-        <input
-            type="number" 
-            class="form-control" 
-            placeholder="Product stock *"
-            name="stock"
-        />
-    </div>
-    <div class="form-group">
-        <textarea
-            rows="5"
-            class="form-control" 
-            placeholder="Description" 
-            name="description"></textarea>
-    </div>                
+    <div *ngIf="product != null">
+        <div class="form-group">
+            <input
+                type="url" 
+                class="form-control" 
+                placeholder="Image path"
+                name="urlPath"
+                [(ngModel)]="this.product.imagePath"
+            />
+        </div>
+        <div class="form-group">
+            <input 
+                type="text" 
+                class="form-control" 
+                placeholder="Name of the product *"
+                name="name"
+                [(ngModel)]="this.product.name"
+            />
+        </div>
+        <div class="form-group">
+            <input 
+                type="number" 
+                class="form-control" 
+                placeholder="Price of the product *"
+                name="price"
+                [(ngModel)]="this.product.price"
+            />
+        </div>
+        <div class="form-group">
+            <input
+                type="number" 
+                class="form-control" 
+                placeholder="Product stock *"
+                name="stock"
+                [(ngModel)]="this.product.stock"
+            />
+        </div>
+        <div class="form-group">
+            <textarea
+                rows="5"
+                class="form-control" 
+                placeholder="Description"
+                name="description"
+                [(ngModel)]="this.product.description"
+            ></textarea>
+        </div>
+    </div>               
 </form>
