create form validations for login and sign up form

--- a/src/app/pages/account/authentication/authentication.component.css
+++ b/src/app/pages/account/authentication/authentication.component.css
@@ -41,3 +41,11 @@
     font-weight: 600;
     text-decoration: none;
 }
+
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+
+.help-block {
+  color: red;
+}
