--- a/src/app/pages/home/consumer/consumer.component.html
+++ b/src/app/pages/home/consumer/consumer.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div *ngFor="let product of products" class="col-md-3 my-card">
         <div routerLink="/product/details/{{ product.id }}">
-            <img src="{{ product.imagePath }}" alt="Nike shoe" height="150px" /><br>
+            <img src="{{ product.imagePath }}" alt="Nike shoe" height="150px" class="img-responsive" /><br>
             <div class="my-card-container">
                 {{ product.name }}<br>
                 &euro;{{ product.price }}<br>
