--- a/src/app/pages/product/mutate/mutate.component.html
+++ b/src/app/pages/product/mutate/mutate.component.html
@@ -1,16 +1,16 @@
-<form #productForm="ngForm" (ngSubmit)="onSubmit(productForm)">
+<form [formGroup]="productForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-        <button 
-            type="submit" 
-            class="btn btn-default btn-lg btn-block" 
+        <button
+            type="submit"
+            class="btn btn-default btn-lg btn-block"
             [disabled]="!productForm.valid">
                 Save
         </button>
     </div>
     <div class="form-group">
-        <a type="button" 
+        <a type="button"
             (click)="handleOnBackPressed()"
-            class="btn btn-link btn-lg" 
+            class="btn btn-link btn-lg"
             style="cursor: pointer;">
             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
         </a>
@@ -18,49 +18,53 @@
     <hr />
     <div *ngIf="product != null">
         <div class="form-group">
-            <input
-                type="url" 
-                class="form-control" 
-                placeholder="Image path"
-                name="urlPath"
-                [(ngModel)]="this.product.imagePath"
-            />
+          <input
+            formControlName="imagePath"
+            type="url"
+            class="form-control"
+            placeholder="Image path"
+          />
         </div>
         <div class="form-group">
-            <input 
-                type="text" 
-                class="form-control" 
+            <input
+                type="text"
+                class="form-control"
                 placeholder="Name of the product *"
-                name="name"
-                [(ngModel)]="this.product.name"
+                formControlName="name"
             />
-        </div>
-        <div class="form-group">
-            <input 
-                type="number" 
-                class="form-control" 
-                placeholder="Price of the product *"
-                name="price"
-                [(ngModel)]="this.product.price"
-            />
+            <span
+            *ngIf="!productForm.get('name').valid && productForm.get('name').touched"
+            class="help-block">Please enter a valid name for the product!</span>
         </div>
         <div class="form-group">
             <input
-                type="number" 
-                class="form-control" 
-                placeholder="Product stock *"
-                name="stock"
-                [(ngModel)]="this.product.stock"
+                type="number"
+                class="form-control"
+                placeholder="Price of the product *"
+                formControlName="price"
             />
+            <span
+            *ngIf="!productForm.get('price').valid && productForm.get('price').touched"
+            class="help-block">Please enter a valid name for the product!</span>
+        </div>
+        <div class="form-group">
+            <input
+                type="number"
+                class="form-control"
+                placeholder="Product stock *"
+                formControlName="stock"
+            />
+            <span
+            *ngIf="!productForm.get('stock').valid && productForm.get('stock').touched"
+            class="help-block">Please enter a valid number!</span>
         </div>
         <div class="form-group">
             <textarea
                 rows="5"
-                class="form-control" 
+                class="form-control"
                 placeholder="Description"
-                name="description"
-                [(ngModel)]="this.product.description"
+                formControlName="description"
             ></textarea>
         </div>
-    </div>               
+    </div>
 </form>
