--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>Shoes</h1>
+<h1>{{ 'Shoes' | uppercase }}</h1>
 <div *ngIf="userIsConsumer(user) == true">
 
     <!-- when using output, note that the var should always be event, so $event -->
