--- a/src/app/pages/product/details/details.component.html
+++ b/src/app/pages/product/details/details.component.html
@@ -1,9 +1,12 @@
 <div>
-    <form #productForm="ngForm">
+    <div *ngIf="pageIsLoading">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+    <form #productForm="ngForm" *ngIf="!pageIsLoading">
         <div class="form-group">
             <button
                 (click)="handleMainButtonClick()"
-                type="button" 
+                type="button"
                 class="btn btn-default btn-lg btn-block">
                     <!-- Check if the user is an admin or consumer -->
                     {{ userIsAdmin(user)? 'Edit' : 'Add to cart' }}
@@ -12,7 +15,7 @@
         <div class="form-group">
             <a type="button"
                 routerLink="/"
-                class="btn btn-link btn-lg" 
+                class="btn btn-link btn-lg"
                 style="cursor: pointer;">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> Back
             </a>
@@ -21,7 +24,7 @@
         <div *ngIf="product != null">
             <div class="form-group">
                 <label for="pwd">Price:</label>
-                <p>&euro;{{ product.price }}</p>
+                <p>{{ product.price | currency:'EUR' }}</p>
             </div>
             <div class="form-group">
                 <label for="pwd">Stock:</label>
@@ -31,6 +34,6 @@
                 <label for="pwd">Description:</label>
                 <p>{{ product.description }}</p>
             </div>
-        </div>                
+        </div>
     </form>
 </div>
