--- a/src/app/pages/home/admin/admin.component.html
+++ b/src/app/pages/home/admin/admin.component.html
@@ -16,7 +16,7 @@
           <app-loading-spinner></app-loading-spinner>
         </div>
         <div class="list-wrapper" *ngIf="!pageIsLoading">
-            <table class="table">
+            <table class="table table-striped borderless fixed-header">
                 <thead>
                     <tr>
                         <th colspan="2">Item</th>
